--- a/REM-Engine_2010.vcxproj.filters
+++ b/REM-Engine_2010.vcxproj.filters
@@ -8,6 +8,33 @@
     <Filter Include="DXUT">
       <UniqueIdentifier>{a43c5c25-0e86-4a20-b64a-883785ff74fd}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Engine">
+      <UniqueIdentifier>{0dfda87e-7159-45bd-bfc1-37f1d11e365d}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Sprite">
+      <UniqueIdentifier>{19b8de0f-ae6f-4639-9a29-858357511e80}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Node">
+      <UniqueIdentifier>{93de96e4-7dbd-4c8a-9ccf-f1b6a44271f9}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Type">
+      <UniqueIdentifier>{6d95a08c-75a3-4196-b71f-f79c792310e8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Scene">
+      <UniqueIdentifier>{356bd196-2b8d-4c7f-a762-a4f5267b60f8}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Renderer">
+      <UniqueIdentifier>{21c4c7b9-4816-4a1b-86d0-064444d4a11b}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Director">
+      <UniqueIdentifier>{b2654696-f039-445c-89e4-ef95c2be56dc}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Texture">
+      <UniqueIdentifier>{f0931400-bf92-4dde-bf01-f34a8a3bff4e}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Engine\Application">
+      <UniqueIdentifier>{0d428c8f-de0e-49e9-800b-9c0880d27928}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <None Include="DXUT\Optional\directx.ico">
@@ -77,26 +104,61 @@
   <ItemGroup>
     <ClCompile Include="REM-Engine.cpp" />
     <ClCompile Include="EmptyProject9.cpp" />
-    <ClCompile Include="Scene.cpp" />
-    <ClCompile Include="Node.cpp" />
-    <ClCompile Include="Director.cpp" />
-    <ClCompile Include="Type.cpp" />
     <ClCompile Include="TestScene.cpp" />
-    <ClCompile Include="Texture.cpp" />
-    <ClCompile Include="Sprite.cpp" />
-    <ClCompile Include="Renderer.cpp" />
     <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="Sprite.cpp">
+      <Filter>Engine\Sprite</Filter>
+    </ClCompile>
+    <ClCompile Include="Renderer.cpp">
+      <Filter>Engine\Renderer</Filter>
+    </ClCompile>
+    <ClCompile Include="Scene.cpp">
+      <Filter>Engine\Scene</Filter>
+    </ClCompile>
+    <ClCompile Include="Type.cpp">
+      <Filter>Engine\Type</Filter>
+    </ClCompile>
+    <ClCompile Include="Node.cpp">
+      <Filter>Engine\Node</Filter>
+    </ClCompile>
+    <ClCompile Include="Director.cpp">
+      <Filter>Engine\Director</Filter>
+    </ClCompile>
+    <ClCompile Include="Texture.cpp">
+      <Filter>Engine\Texture</Filter>
+    </ClCompile>
+    <ClCompile Include="Application.cpp">
+      <Filter>Engine\Application</Filter>
+    </ClCompile>
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Scene.h" />
-    <ClInclude Include="Node.h" />
-    <ClInclude Include="Director.h" />
-    <ClInclude Include="Type.h" />
     <ClInclude Include="TestScene.h" />
-    <ClInclude Include="Texture.h" />
-    <ClInclude Include="Sprite.h" />
-    <ClInclude Include="Renderer.h" />
     <ClInclude Include="Camera.h" />
+    <ClInclude Include="Sprite.h">
+      <Filter>Engine\Sprite</Filter>
+    </ClInclude>
+    <ClInclude Include="Renderer.h">
+      <Filter>Engine\Renderer</Filter>
+    </ClInclude>
+    <ClInclude Include="Scene.h">
+      <Filter>Engine\Scene</Filter>
+    </ClInclude>
+    <ClInclude Include="Type.h">
+      <Filter>Engine\Type</Filter>
+    </ClInclude>
+    <ClInclude Include="Node.h">
+      <Filter>Engine\Node</Filter>
+    </ClInclude>
+    <ClInclude Include="Director.h">
+      <Filter>Engine\Director</Filter>
+    </ClInclude>
+    <ClInclude Include="Texture.h">
+      <Filter>Engine\Texture</Filter>
+    </ClInclude>
+    <ClInclude Include="Application.h">
+      <Filter>Engine\Application</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <CLInclude Include="resource.h">
